--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,9 @@
-Options All -Indexes
-
-RewriteEngine On
-
-RewriteRule ^([-a-zA-Z0-9/]+)$ index.php?url=$1
+<IfModule mod_rewrite.c>
+    Options -Indexes
+    RewriteEngine On
+    RewriteBase /clinica/
+    
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^ index.php [L]
+</IfModule>
